refactor: tune performance for medium-sized arrays