@@ -1,7 +1,6 @@
 package de.siegmar.fastcsv.reader;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.StringJoiner;
 
@@ -93,7 +92,7 @@ public class CsvRecord {
     ///
     /// @return all fields of this record, never `null`
     public List<String> getFields() {
-        return Collections.unmodifiableList(Arrays.asList(fields));
+        return List.of(fields);
     }
 
     /// Gets the count of fields in this record.
