@@ -2,7 +2,6 @@ package de.siegmar.fastcsv.reader;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.LinkedList;
@@ -41,7 +40,7 @@ public final class NamedCsvRecord extends CsvRecord {
     ///
     /// @return the header names, never `null`
     public List<String> getHeader() {
-        return Collections.unmodifiableList(Arrays.asList(header));
+        return List.of(header);
     }
 
     /// Retrieves the value of a field by its case-sensitive name, considering the first occurrence in case of
